# SDL_mng

./: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  SDL_mng.c  SDL_mng.h  SDL_mng.pc.cmakein  SDL_mng.pc.in  SDL_mng.spec  configure  configure.ac  mngtest.c
